(library
 (name js_log)
 (public_name ezjs-min.log)
 (modules js_log)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml stdlib-shims))

(library
 (name js_min)
 (public_name ezjs-min.js)
 (modules js_min)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml))

(library
 (name dom_min)
 (public_name ezjs-min.dom)
 (modules dom_min)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_min))
