(library
 (name timeline)
 (public_name ezjs-timeline)
 (modules timeline)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml))

(library
 (name timeline_encoding)
 (public_name ezjs-timeline.encoding)
 (optional)
 (wrapped false)
 (preprocess (pps js_of_ocaml-ppx))
 (modules timeline_types timeline_encoding timeline_utils)
 (libraries ocplib-json-typed))
